B&L QA/objects/Alliance_Payment_Details__c.object
<CustomObject>
    <description>Contains Monthly Payment details for Alliance contracts.  Viewable/editable by USSUR Contracts and USSUR Contracts Administration only</description>
    <fields>
        <fullName>Amount_Received__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Amount Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <description>Check Number of payment</description>
        <label>Check Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <description>Contract to which this Alliance Payment Detail is related</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Alliance Payment Details</relationshipLabel>
        <relationshipName>Alliance_Payment_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date payment was received</description>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Difference__c</fullName>
        <description>Amount Received less Alliance Monthly Payment (from contract header) - an overpayment is a POSITIVE number</description>
        <formula>IF(Payment_Received__c = TRUE, Amount_Received__c - Contract__r.Alliance_Monthly_Payment__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>Payment Month</description>
        <label>Month</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Number__c</fullName>
        <label>Payment Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Payment was received?</description>
        <label>Payment Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Bal_After_Payment__c</fullName>
        <description>Amount due once this payment is made - Calculated in load spreadsheet and uploaded into the system</description>
        <label>Scheduled Bal After Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Payment Year</description>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Alliance Payment Details</label>
    <nameField>
        <displayFormat>APD-{000000000}</displayFormat>
        <label>Alliance Payment Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alliance Payment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>